# py-fm2gp

./: .travis.yml  Makefile  README.md  setup.cfg  setup.py
src/fm2gp/: matrix.py  power.py  primes.py
tests/: test_matrix.py  test_matrix_power.py  test_power.py  test_primes.py
