[metadata]
name = fm2gp
author = Kristoffer Andersson
author-email = kode.kristoff@gmail.com
summary = FM2GP in Python.
description-file = README.md
home-page = https://www.github.com/spraakbanken/python-json-tools
license = MIT
classifier =
	Development Status :: 2 - Pre-Alpha
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    # Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    # uncomment if you test on these interpreters:
    # Programming Language :: Python :: Implementation :: IronPython
    # Programming Language :: Python :: Implementation :: Jython
    # Programming Language :: Python :: Implementation :: Stackless
    Topic :: Utilities

[files]
packages =
    fm2gp

[extras]
dev =
	pytest
	pytest-cov
    flake8
    black
    isort

[flake8]
max-line-length=97
